# parsecpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/point3d/: CMakeLists.txt  README.md  point3d.cpp
include/: parsec.hpp  parsec_test.hpp  tuple.hpp
test/: CMakeLists.txt  parsec.cpp  parsec_test.cpp  tuple_test.cpp
